# grounded-context-mcp

./: .coverage  main.py  pyproject.toml
src/grounded_context_mcp/: __init__.py  server.py
src/grounded_context_mcp/core/: fs.py  git.py  scoring.py
src/grounded_context_mcp/tools/: __init__.py  env_specs.py  git_insights.py  grounded_context.py  recommend_context.py  search_repo.py
tests/: test_env_specs.py  test_get_grounded_context.py  test_git_insights.py  test_recommend_context.py  test_schema_snapshot.py  test_search_repo.py
tests/snapshots/: tools_schema.json
